@@ -11,7 +11,8 @@ export MAIN_DIALOG='
 			</text>
 			<tree rules-hint="true" exported-column="0">
 				<variable>TREE1</variable>
-				<width>200</width><height>100</height>
+				<height>100</height>
+				<width>200</width>
 				<label>One     | Two     | Three </label>
 				<item stock-id="gtk-yes">r1c1|r1c2|r1c3</item>
 				<item stock-id="gtk-no">r2c1|r2c2|r2c3</item>
@@ -28,7 +29,8 @@ export MAIN_DIALOG='
 			</text>
 			<tree rules-hint="true" exported-column="2">
 				<variable>TREE2</variable>
-				<width>200</width><height>100</height>
+				<height>100</height>
+				<width>200</width>
 				<label>One     | Two     | Three </label>
 				<item>r1c1|r1c2|r1c3</item>
 				<item>r2c1|r2c2|r2c3</item>
