@@ -142,6 +142,7 @@ int action_launchwindow(GtkWidget *widget, char *string)
 	extern gchar     *program_src;
 	extern gint       charsreaded;
 #endif
+	extern int        instruction_counter;
 	GtkWidget        *window;
 	variable         *existing;
 
@@ -149,50 +150,64 @@ int action_launchwindow(GtkWidget *widget, char *string)
 	fprintf(stderr, "%s(): string=%s\n", __func__, string);
 #endif
 
-	/* Check if a variable already exists with the same name as that
-	 * passed as the parameter to launch to establish if the window
-	 * has already been launched (it's not foolproof but it works) */
-	existing = variables_get_by_name(string);
+	/* Thunor: Added to check that a program isn't already being parsed
+	 * as run_program() is not reentrant and it'll error with a parser
+	 * message that actually relates to the newly launched program
+	 * (see Issue16 on the gtkdialog website) */
+	if (instruction_counter == 0) {
 
-	if (existing != NULL && existing->Widget != NULL) {
+		/* Check if a variable already exists with the same name as that
+		 * passed as the parameter to launch to establish if the window
+		 * has already been launched (it's not foolproof but it works) */
+		existing = variables_get_by_name(string);
 
-		/* The window has already been launched so just give it the focus */
+		if (existing != NULL && existing->Widget != NULL) {
+
+			/* The window has already been launched so just give it the focus */
 #ifdef DEBUG
-		fprintf(stderr, "%s(): existing=%p Name=%s\n", __func__,
-			existing, existing->Name);
+			fprintf(stderr, "%s(): existing=%p Name=%s\n", __func__,
+				existing, existing->Name);
 #endif
 
-		/**
-		* Patriot Oct 2009: Fixing the issue above [in action_closewindow]
-		* also requires a minor adjustment to this section.
-		**/
-		//Redundant: parent = gtk_widget_get_toplevel(existing->Widget);
-		window = gtk_widget_get_ancestor(existing->Widget, GTK_TYPE_WINDOW);
-		gtk_window_present(GTK_WINDOW(window));
+			/**
+			* Patriot Oct 2009: Fixing the issue above [in action_closewindow]
+			* also requires a minor adjustment to this section.
+			**/
+			//Redundant: parent = gtk_widget_get_toplevel(existing->Widget);
+			window = gtk_widget_get_ancestor(existing->Widget, GTK_TYPE_WINDOW);
+			gtk_window_present(GTK_WINDOW(window));
+
+		} else {
+
+			/* Get the program source from the envvar and initialise
+			 * everything necessary ready for a new parse */
+			//Redundant: set_program_source(string);
+			get_program_from_variable(string);
+
+#ifdef DEBUG
+			fprintf(stderr, "%s():\ncharsreaded=%i\nprogram_src=%s\n",
+				__func__, charsreaded, program_src);
+#endif
+
+			/* Export all variables */
+			variables_export_all();
+
+#ifdef DEBUG
+			fprintf(stderr, "%s():\ncharsreaded=%i\nprogram_src=%s\n",
+				__func__, charsreaded, program_src);
+#endif
+
+			/* Call the parser to interpret the new code (it won't return) */
+			gtkdialog_parse();
+
+			g_warning("%s(): This won't be reached.", __func__);
+
+		}
 
 	} else {
-
-		/* Get the program source from the envvar and initialise
-		 * everything necessary ready for a new parse */
-		//Redundant: set_program_source(string);
-		get_program_from_variable(string);
-
-#ifdef DEBUG
-	fprintf(stderr, "%s():\ncharsreaded=%i\nprogram_src=%s\n", __func__, charsreaded, program_src);
-#endif
-
-		/* Export all variables */
-		variables_export_all();
-
-#ifdef DEBUG
-	fprintf(stderr, "%s():\ncharsreaded=%i\nprogram_src=%s\n", __func__, charsreaded, program_src);
-#endif
-
-		/* Call the parser to interpret the new code (it won't return) */
-		gtkdialog_parse();
-
-		g_warning("%s(): This won't be reached.", __func__);
-
+		fprintf(stderr, "%s(): It's not possible to launch %s at this time: \
+try launching after the originating window has fully loaded.\n",
+			__func__, string);
 	}
 
 	return 0;
@@ -600,6 +615,16 @@ int action_activate(GtkWidget *widget, char *string)
 int action_grabfocus(GtkWidget *widget, char *string)
 {
 	variables_grabfocus(string);
+	return 0;
+}
+
+/***********************************************************************
+ * Action presentwindow                                                *
+ ***********************************************************************/
+
+int action_presentwindow(GtkWidget *widget, char *string)
+{
+	variables_presentwindow(string);
 	return 0;
 }
 
